--- a/zoz.css
+++ b/zoz.css
@@ -72,6 +72,14 @@ img {
   display: block;
   width: 100%;
 }
+
+.main{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+}
+
 .welcome-section {
     display: flex;
     flex-direction: column;
@@ -90,25 +98,20 @@ img {
     font-style: italic;
     color: ghostwhite;
     text-align: center;
+    max-width: 90%;
 }
 
 
 .projects-section {
     text-align: center;
     padding: 10rem 2rem;
-    background: var(--main-blue);
+    background: ghostwhite;
   }
 
-.projects-section-header {
-  letter-spacing: 16px;
-  max-width: 340px;
-  margin: 0 auto 6rem auto;
-}
-
-@media (max-width: 28.75em) {
-  .projects-section-header {
-    font-size: 4rem;
-  }
+.section-header {
+  letter-spacing: 12px;
+  max-width: 90%;
+  margin: 0 auto 3rem auto;
 }
 
 .projects-grid {
@@ -129,10 +132,12 @@ img {
     grid-template-columns: 1fr;
   }
 }
-
+.projects-section h2{
+  color:var(--main-gray);
+}
 .project {
     background: var(--main-gray);
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
     border-radius: 2px;
 }
 .code {
@@ -174,66 +179,22 @@ img {
   align-items: center;
   text-align: center;
   width: 100%;
-  height: 80vh;
+  height: 40vh;
   padding: 0 2rem;
   background: var(--main-gray);
 }
 
-.contact-section-header > h2 {
-  font-size: 6rem;
-}
-
-@media (max-width: 28.75em) {
-  .contact-section-header > h2 {
-    font-size: 4rem;
-  }
-}
-
-.contact-section-header > p {
-  font-style: italic;
-}
-
 .contact-links {
   display: flex;
-  justify-content: center;
+  font-size: 2.5rem;
+  justify-content: space-around;
   width: 100%;
-  max-width: 980px;
+  max-width: 320px;
   margin-top: 4rem;
   flex-wrap: wrap;
 }
-
-.contact-details {
-  font-size: 2.4rem;
-  text-shadow: 2px 2px 1px #1f1f1f;
-  transition: transform 0.3s ease-out;
-}
-
-.contact-details:hover {
-  transform: translateY(8px);
-}
-
-/* Footer */
-
-footer {
-  font-weight: 300;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 2rem;
-  background: var(--main-gray);
-  border-top: 4px solid var(--main-red);
-}
-
-footer > p {
-  margin: 2rem;
-}
-
-footer i {
-  vertical-align: middle;
-}
-
 @media (max-width: 28.75em) {
-  footer {
-    flex-direction: column;
-    text-align: center;
+  .section-header{
+    font-size: 3rem;
   }
 }
