--- a/zoz.css
+++ b/zoz.css
@@ -54,9 +54,11 @@ h1, h2 {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     text-align: center;
+    color:#deeafc;
   }
 h1{
   font-size: 6rem;
+  max-width:95%;
   }
 
 h2 {
@@ -96,7 +98,7 @@ img {
     font-size: 3rem;
     font-weight: 200;
     font-style: italic;
-    color: ghostwhite;
+    color: #deeafc;
     text-align: center;
     max-width: 90%;
 }
@@ -105,7 +107,7 @@ img {
 .projects-section {
     text-align: center;
     padding: 10rem 2rem;
-    background: ghostwhite;
+    background: #deeafc;
   }
 
 .section-header {
@@ -157,6 +159,8 @@ img {
 .project-title {
   font-size: 2rem;
   padding: 2rem 0.5rem;
+  color:#deeafc;
+  letter-spacing:.2rem;
 }
 
 
@@ -193,6 +197,10 @@ img {
   margin-top: 4rem;
   flex-wrap: wrap;
 }
+.contact-links>a{
+	color:#deeafc;
+	}
+
 @media (max-width: 28.75em) {
   .section-header{
     font-size: 3rem;
