--- a/zoz.css
+++ b/zoz.css
@@ -1,6 +1,4 @@
 :root{
-    --main-white: #f0f0f0;
-    --main-red: #be3144;
     --main-blue: #45567d;
     --main-gray: #303841;
 }
@@ -16,24 +14,22 @@
 }
 
 html{
-  font-size: 62.5%;
-  box-sizing: border-box;
+	/*overflow: hidden;*/
+	font-size: 62.5%;
+	box-sizing: border-box;
 }
-
 
 @media (max-width: 75em) {
   html {
     font-size: 60%;
   }
 }
-
 /* 980px / 16px = 61.25em */
 @media (max-width: 61.25em) {
   html {
     font-size: 58%;
   }
 }
-
 /* 460px / 16px = 28.75em */
 @media (max-width: 28.75em) {
   html {
@@ -43,11 +39,12 @@ html{
 
 
 body {
-      font-family: 'Poppins', sans-serif;
-      font-size: 1.8rem;
-      font-weight: 400;
-      line-height: 1.4;
-      color: var(--main-white);
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.4;
+    color: var(--main-white);
   }
 
 h1, h2 {
@@ -93,7 +90,6 @@ img {
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
 
-
 .welcome-section > p {
     font-size: 3rem;
     font-weight: 200;
@@ -102,7 +98,6 @@ img {
     text-align: center;
     max-width: 90%;
 }
-
 
 .projects-section {
     text-align: center;
