--- a/zoz.css
+++ b/zoz.css
@@ -50,7 +50,7 @@ h1, h2 {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     text-align: center;
-    color:rgba(0,0,0,.4);
+    color:rgba(0,0,0,.5);
   }
 h1{
   font-size: 6rem;
@@ -187,11 +187,10 @@ img {
 }
 .contact-links {
   display: flex;
-  font-size: 2.5rem;
+/*  font-size: 2.5rem;*/
   justify-content: space-around;
   width: 100%;
   max-width: 320px;
-  margin-top: 4rem;
   flex-wrap: wrap;
 }
 .contact-links>a{
@@ -202,6 +201,9 @@ img {
   .section-header{
     font-size: 3rem;
   }
+  .project-tile{
+    opacity: 1;
+  }
 }
 .contact-details{
   height: 40px;
@@ -211,11 +213,11 @@ img {
 i{
   height: 40px;
   width: 40px;
-  color: white;
 }
 
 @media(max-width: 500px){
   .project-tile{
     min-width: 90%;
+    opacity: 1;
   }
 }
